--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ body {
   background-color: black;  
   color: skyblue;
   font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-weight: bold;
 
 }
 
