--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,8 @@ h1 {
 body {
   background-color: black;  
   color: skyblue;
-  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  ;
-
 }
 
 a {
