--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,14 @@ h1 {
 
 }
 
+header h1{
+  color: skyblue
+}
+
+header h1::selection {
+  background-color: black;
+}
+
 body {
   background-color: black;  
   color: skyblue;
